--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   }
 }
 
+*, :before, :after {
+    box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -30,8 +34,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h1 {
+  text-shadow: 1px 1px 2px #000;
+}
+
 .dashboard {
   background: #fff;
   color: #000;
   height: 100%;
+}
+
+.bg-accent {
+  background-color: #0a580a;
 }
